// Vitest Snapshot v1

exports[`<GameOver> snapshots > AiWin player 0 matches 1`] = `
<p>
  AiWin
</p>
`;

exports[`<GameOver> snapshots > AiWin player 1 matches 1`] = `
<p>
  AiWin
</p>
`;

exports[`<GameOver> snapshots > Draw player 0 matches 1`] = `
<p>
  Draw
</p>
`;

exports[`<GameOver> snapshots > Draw player 1 matches 1`] = `
<p>
  Draw
</p>
`;

exports[`<GameOver> snapshots > GameOver player 0 matches 1`] = `
<p>
  GameOver
</p>
`;

exports[`<GameOver> snapshots > GameOver player 1 matches 1`] = `
<p>
  GameOver
</p>
`;

exports[`<GameOver> snapshots > MoveInvalid player 0 matches 1`] = `
<p>
  MoveInvalid
</p>
`;

exports[`<GameOver> snapshots > MoveInvalid player 1 matches 1`] = `
<p>
  MoveInvalid
</p>
`;

exports[`<GameOver> snapshots > MoveSuccess player 0 matches 1`] = `
<p>
  MoveSuccess
</p>
`;

exports[`<GameOver> snapshots > MoveSuccess player 1 matches 1`] = `
<p>
  MoveSuccess
</p>
`;

exports[`<GameOver> snapshots > MoveSuccessNextPlayerSkipped player 0 matches 1`] = `
<p>
  MoveSuccessNextPlayerSkipped
</p>
`;

exports[`<GameOver> snapshots > MoveSuccessNextPlayerSkipped player 1 matches 1`] = `
<p>
  MoveSuccessNextPlayerSkipped
</p>
`;

exports[`<GameOver> snapshots > NewGame player 0 matches 1`] = `
<p>
  NewGame
</p>
`;

exports[`<GameOver> snapshots > NewGame player 1 matches 1`] = `
<p>
  NewGame
</p>
`;

exports[`<GameOver> snapshots > Player0Win player 0 matches 1`] = `
<p>
  Player0Win
</p>
`;

exports[`<GameOver> snapshots > Player0Win player 1 matches 1`] = `
<p>
  Player0Win
</p>
`;

exports[`<GameOver> snapshots > Player1Win player 0 matches 1`] = `
<p>
  Player1Win
</p>
`;

exports[`<GameOver> snapshots > Player1Win player 1 matches 1`] = `
<p>
  Player1Win
</p>
`;
